feat(be): 인증 인가 틀 구현

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -40,8 +40,8 @@ logging:
     org.springframework.transaction.interceptor: TRACE
 
 jwt:
-  secret: ${JWT_SECRET}
-  expiration: ${JWT_EXPIRATION}
+  secret: ${JWT_SECRET:3f1e2a0e-8e8f-4c0a-9d3f-b3fae09e6d5a}
+  expiration: ${JWT_EXPIRATION:900000}
 
 server:
   port: 8080
