--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -41,7 +41,11 @@ logging:
 
 jwt:
   secret: ${JWT_SECRET:3f1e2a0e-8e8f-4c0a-9d3f-b3fae09e6d5a}
-  expiration: ${JWT_EXPIRATION:900000}
+  access-token-expiration: ${JWT_ACCESS_TOKEN_EXPIRATION:PT15M}
+  refresh-token-expiration: ${JWT_REFRESH_TOKEN_EXPIRATION:PT168H}
+
+cookie:
+  secure: false
 
 server:
   port: 8080
