refactor(be): dev 모드 초기 데이터 세팅

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -6,8 +6,8 @@ spring:
     password:
   jpa:
     hibernate:
-      ddl-auto: none
-    defer-datasource-initialization: true
+      ddl-auto: update
+    defer-datasource-initialization: false
   sql:
     init:
       mode: always
