--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: springboot-jpa
   profiles:
-    active: dev
+    active: dev,test-mail  # MockMailService 사용,test-mail
   config:
     import: optional:file:.env
   jpa:
@@ -27,6 +27,22 @@ spring:
       port: 6379
       password: ""
       timeout: 6000ms
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME:your-email@gmail.com}
+    password: ${MAIL_PASSWORD:your-app-password}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+mail:
+  from:
+    address: ${MAIL_FROM_ADDRESS:grids.circles.cafe@gmail.com}
+    name: ${MAIL_FROM_NAME:Grids & Circles}
 
 springdoc:
   default-produces-media-type: application/json;charset=UTF-8
